# fortran-gmm-EM

./: CMakeLists.txt  readme.md
src/: emExample.f90  gmmEM.f90  linalg.f90  precision.f90  random.f90
